Fix some examples in the user-manual, allow <pre> lines to wrap, s/13.1/8.0/

--- a/website.css
+++ b/website.css
@@ -139,6 +139,8 @@ pre {
     color: black;
 
     font-family: monospace;
+
+    white-space: pre-wrap;
 }
 
 tt {
